[gd_scene load_steps=80 format=2]

[ext_resource path="res://Character models/Enemies/Cars/car_cyan_drive.png" type="Texture" id=1]
[ext_resource path="res://Character models/Enemies/Cars/car_red_drive.png" type="Texture" id=2]
[ext_resource path="res://Character models/Enemies/Cars/car_red_explosion.png" type="Texture" id=3]
[ext_resource path="res://Character models/Enemies/Cars/car_yellow_explosion.png" type="Texture" id=4]
[ext_resource path="res://Character models/Enemies/Cars/car_yellow_drive.png" type="Texture" id=5]
[ext_resource path="res://Character models/Enemies/Cars/car_purple_drive.png" type="Texture" id=6]
[ext_resource path="res://Character models/Enemies/Cars/car_purple_explosion.png" type="Texture" id=7]
[ext_resource path="res://Character models/Enemies/Cars/car_cyan_explosion.png" type="Texture" id=8]
[ext_resource path="res://Source/Actors/car.gd" type="Script" id=9]
[ext_resource path="res://Sound/World/car_horn.wav" type="AudioStream" id=10]
[ext_resource path="res://Sound/World/jump.wav" type="AudioStream" id=11]
[ext_resource path="res://Sound/Player/death.wav" type="AudioStream" id=29]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 96, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 96, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 96, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 96, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 96, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 96, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 96, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 288, 0, 96, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 96, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 96, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 96, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 96, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 96, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 96, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 288, 0, 96, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 122, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 244, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 366, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 4 )
region = Rect2( 488, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 4 )
region = Rect2( 610, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 732, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 4 )
region = Rect2( 854, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 4 )
region = Rect2( 976, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 4 )
region = Rect2( 1098, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 1220, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 1342, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 3 )
region = Rect2( 122, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 3 )
region = Rect2( 244, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 366, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 488, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 610, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 732, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 854, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 976, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 1098, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 1220, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 1342, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 8 )
region = Rect2( 122, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 8 )
region = Rect2( 244, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 8 )
region = Rect2( 366, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 8 )
region = Rect2( 488, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 8 )
region = Rect2( 610, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 8 )
region = Rect2( 732, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 8 )
region = Rect2( 854, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 8 )
region = Rect2( 976, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 8 )
region = Rect2( 1098, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 8 )
region = Rect2( 1220, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 8 )
region = Rect2( 1342, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 7 )
region = Rect2( 122, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 7 )
region = Rect2( 244, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 7 )
region = Rect2( 366, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 7 )
region = Rect2( 488, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 7 )
region = Rect2( 610, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 7 )
region = Rect2( 732, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 7 )
region = Rect2( 854, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 7 )
region = Rect2( 976, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 7 )
region = Rect2( 1098, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 7 )
region = Rect2( 1220, 0, 122, 74 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 7 )
region = Rect2( 1342, 0, 122, 74 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "cyan",
"speed": 7.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "purple",
"speed": 7.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "red",
"speed": 7.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "yellow",
"speed": 7.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": false,
"name": "yellow death",
"speed": 20.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ) ],
"loop": false,
"name": "red death",
"speed": 20.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ) ],
"loop": false,
"name": "cyan death",
"speed": 20.0
}, {
"frames": [ SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ) ],
"loop": false,
"name": "purple death",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 33, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 1 )

[node name="car" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource( 9 )

[node name="car_sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
frames = SubResource( 1 )
animation = "cyan"
frame = 2
playing = true

[node name="hitbox" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -32 )
collision_layer = 2
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="hitbox"]
polygon = PoolVector2Array( -46, 21, -31, 26, -29, 32, 24, 32, 46, 23, 46, 4, 18, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -8 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2( -1, 0 )
collision_layer = 2
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 0.211765, 0.972549, 0, 1 )
shape = SubResource( 3 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( 2, 7 )
scale = Vector2( 6.5, 3.5 )
process_parent = true
physics_process_parent = true

[node name="honk" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -25.0

[node name="jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -20.0

[node name="death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 29 )
volume_db = -10.0
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_screen_entered"]
